# hass-intesisbox

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  stale.yaml  validate-component.yaml
custom_components/intesisbox/: IntesisBoxEmulator.py  __init__.py  climate.py  config_flow.py  intesisbox.py  manifest.json
custom_components/intesisbox/translations/: en.json
